--- a/0x04-TypeScript/task_0/tsconfig.json
+++ b/0x04-TypeScript/task_0/tsconfig.json
@@ -1,6 +1,7 @@
 
 {
   "compilerOptions": {
+    "skipLibCheck": true,
     "outDir": "./dist/",
     "sourceMap": true,
     "noImplicitAny": true,
